<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.edu.hcmute.ms14110050.quanlyquanan_phucvu.presentation.order.activity.AddEditOrderActivity">

    <item
        android:id="@+id/menu_process_order"
        android:visible="false"
        android:orderInCategory="100"
        android:icon="@drawable/ic_order_32_0"
        android:title="@string/action_create_order"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_table"
        android:visible="false"
        android:orderInCategory="110"
        android:icon="@drawable/ic_table_16_0"
        android:title="@string/action_select_tables"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_food"
        android:visible="false"
        android:orderInCategory="120"
        android:icon="@drawable/ic_food_16_0"
        android:title="@string/action_select_foods"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_serve_order"
        android:visible="false"
        android:orderInCategory="100"
        android:icon="@drawable/ic_order_32_0"
        android:title="@string/action_confirm_paying"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_pay_order"
        android:visible="false"
        android:orderInCategory="110"
        android:icon="@drawable/ic_order_32_0"
        android:title="@string/action_confirm_paying"
        app:showAsAction="ifRoom"/>

</menu>
