<layout>
    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="vn.edu.hcmute.ms14110050.quanlyquanan_phucvu.network.model.user.User" />

        <variable
            name="viewmodel"
            type="vn.edu.hcmute.ms14110050.quanlyquanan_phucvu.presentation.home.account.AccountViewModel" />

        <variable
            name="validation"
            type="vn.edu.hcmute.ms14110050.quanlyquanan_phucvu.presentation.home.account.validation.AccountValidation" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="vn.edu.hcmute.ms14110050.quanlyquanan_phucvu.presentation.home.account.AccountFragment">

        <TextView
            android:id="@+id/txt_error_msg"
            android:visibility="@{viewmodel.isNetworkConnected ? View.GONE : View.VISIBLE}"
            android:text="@string/internet_disconnect"
            android:textSize="@dimen/txtSize_normal"
            android:textColor="#fff"
            android:gravity="center"
            android:background="#ff0000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:id="@+id/edit_account_vg"
            app:layout_goneMarginTop="0dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_error_msg"
            app:layout_constraintBottom_toTopOf="@id/btn_submit">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_account"
                    android:src="@{viewmodel.profileDrawable}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--FULLNAME LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_fullname"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/huge_large_space"
                    app:layout_constraintTop_toBottomOf="@id/img_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_fullname"
                        android:enabled="false"
                        android:text="@{data.fullname}"
                        android:hint="@string/hint_fullname"
                        style="@style/EditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

                <!--USERNAME LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_username"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_space"
                    app:layout_constraintTop_toBottomOf="@id/til_fullname"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_username"
                        android:enabled="false"
                        android:text="@{data.username}"
                        android:hint="@string/hint_username"
                        style="@style/EditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

                <!--EMAIL LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    app:addErrorViewer="@{validation.emailValidator}"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_space"
                    app:layout_constraintTop_toBottomOf="@id/til_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_email"
                        android:text="@={data.email}"
                        app:addTextWatcher="@{validation.emailValidator}"
                        android:hint="@string/hint_email"
                        style="@style/EditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

                <!--IDENTITY CARD NUMBER LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_identity_number"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_space"
                    app:layout_constraintTop_toBottomOf="@id/til_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_identity_number"
                        android:enabled="false"
                        android:text="@{data.identityCard}"
                        android:inputType="number"
                        android:hint="@string/hint_identitty_number"
                        style="@style/EditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

                <!--PHONE LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    app:addErrorViewer="@{validation.phoneValidator}"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_space"
                    app:layout_constraintTop_toBottomOf="@id/til_identity_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_phone"
                        android:text="@={data.phone}"
                        android:inputType="number"
                        app:addTextWatcher="@{validation.phoneValidator}"
                        android:hint="@string/hint_phone"
                        style="@style/EditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

                <!--BIRTHDATE LINE-->
                <TextView
                    android:id="@+id/txt_birthdate"
                    android:text="@string/label_birthdate"
                    android:textSize="@dimen/txtSize_large"
                    android:textColor="@color/colorTextFragAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_space"
                    app:layout_constraintTop_toBottomOf="@+id/til_phone"/>

                <TextView
                    android:id="@+id/txt_show_birthdate"
                    android:text="@{data.birthDateStrValue}"
                    android:textColor="#000"
                    android:textSize="@dimen/txtSize_large"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/txt_birthdate"
                    app:layout_constraintBottom_toBottomOf="@id/txt_birthdate"
                    app:layout_constraintStart_toEndOf="@id/txt_birthdate"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!--GENDER LINE-->
                <TextView
                    android:id="@+id/txt_gender"
                    android:text="@string/label_gender"
                    android:textSize="@dimen/txtSize_large"
                    android:textColor="@color/colorTextFragAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xhuge_large_space"
                    app:layout_constraintTop_toBottomOf="@+id/txt_show_birthdate"
                    app:layout_constraintEnd_toEndOf="@id/txt_birthdate"/>

                <TextView
                    android:id="@+id/filter_gender"
                    android:text="@{viewmodel.genderStrValue}"
                    android:textColor="#000"
                    android:textSize="@dimen/txtSize_large"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/txt_show_birthdate"
                    app:layout_constraintEnd_toEndOf="@id/txt_show_birthdate"
                    app:layout_constraintTop_toTopOf="@id/txt_gender"
                    app:layout_constraintBottom_toBottomOf="@id/txt_gender"/>

                <!--ADDRESS LINE-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address"
                    app:hintTextAppearance="@style/AccTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxlarge_space"
                    app:layout_constraintTop_toBottomOf="@id/filter_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_address"
                        android:text="@={data.address}"
                        android:inputType="textMultiLine"
                        android:hint="@string/hint_address"
                        style="@style/AddressEditTextAccount"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <!--ACTION BUTTONS LINE-->
        <!--NÚT LƯU-->
        <TextView
            android:id="@+id/btn_submit"
            android:enabled="@{validation.valid &amp;&amp; viewmodel.isNetworkConnected}"
            android:onClick="@{()->viewmodel.onSubmitSaveUserProfile(data)}"
            style="@style/EditAccountButton"
            android:background="@{validation.valid ? @drawable/bg_button_submit : @drawable/bg_button_submit_disabled}"
            android:text="@string/action_save"
            android:layout_marginTop="@dimen/xxxlarge_space"
            android:layout_marginBottom="@dimen/large_space"
            app:layout_constraintEnd_toStartOf="@+id/btn_reset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!--NÚT RESET - NẾU ĐANG CHỈNH SỬA THÔNG TIN TÀI KHOẢN-->
        <!--NÚT CANCEL - NẾU ĐANG ĐỔI PASSWORD-->
        <TextView
            android:id="@+id/btn_reset"
            android:onClick="@{viewmodel::onResetAction}"
            style="@style/EditAccountButton"
            android:background="@drawable/bg_button_cancel"
            android:text="@string/action_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_submit"
            app:layout_constraintTop_toTopOf="@id/btn_submit"/>

    </android.support.constraint.ConstraintLayout>

</layout>